# django-name

./: -m  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  context_processors.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  runtests.py  setup.py  tox.ini  views.py
.github/workflows/: test.yml
docs/: Makefile  conf.py  configuration.rst  development.rst  index.rst  installation.rst  models.rst
name/: NACO.py  __init__.py  admin.py  app_settings.py  context_processors.py  decorators.py  feeds.py  import_initial_batch.py  models.py  serializers.py  tests.py  urls.py  utils.py  validators.py  views.py
name/api/: serializers.py  stats.py  views.py
name/fixtures/: identifier_types.json  initial_data.json
name/migrations/: 0001_initial.py  0002_change_choice_fields.py  0003_auto_20180917_2221.py  0004_auto_20191216_1730.py  0005_auto_20200423_1646.py
name/south_migrations/: 0001_initial.py
name/static/.svn/: wc.db
name/static/css/: jquery-ui.css  site_base.css
name/static/name/bootstrap/css/: bootstrap.css  bootstrap.min.css
name/static/name/css/: name.css
name/static/name/js/: ajax-form.js  map.js  stats.js
name/templates/name/: _navbar.html  _pagination.html  about.html  base.html  introduction.html  landing.html  map.html  name.html  name.mads.xml  name_detail.html  opensearch.xml  search.html  stats.html
name/templatetags/: name_extras.py
requirements/: requirements-base.txt  requirements-codestyle.txt  requirements-common.txt  requirements-dev.txt  requirements-test.txt
templates/name/: map.html  name_detail.html  search.html
tests/: conftest.py  test_context_processors.py  test_decorators.py  test_feeds.py  test_metadata.py  test_models.py  test_name_detail.py  test_search.py  test_stats.py  test_templatetags.py  test_tests.py  test_utils.py  test_validators.py  test_views.py  urls.py
tests/settings/: base.py  dev.py  test-sqlite.py  test.py  test_mariadb.py  test_mysql.py  test_postgres.py  travis.py
