[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "django-name"
description = "Name Authority App for Django."
readme = "README.md"
version = "1.0.0"
license = { text = "BSD" }
keywords = ["django", "name", "citation"]
requires-python = ">=3.9,<4"
authors = [
  { name = "University of North Texas Libraries", email = "mark.phillips@unt.edu" }
]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
]

[project.urls]
homepage = "https://github.com/unt-libraries/django-name"

[tool.poetry]
include = ["*.txt", "name/templates/*", "name/static/*", "name/fixtures/*"]
packages = [
    { include = "name", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "==2.7.3"
markdown2 = ">=2.4.0"
djangorestframework = "~3.15.2"
pynaco = { git = "https://github.com/unt-libraries/pynaco" }

[tool.poetry.group.codestyle.dependencies]
flake8 = "*"

[tool.poetry.group.dev.dependencies]
Django = "4.2.27"
django-debug-toolbar = "3.8.1"
mysqlclient = "2.0.1"

[tool.poetry.group.test.dependencies]
tox = ">=3.3.0"
markdown2 = ">=2.4.0"
pytest-django = ">=4.6.2"
pytest = ">=7.1.0"
pytest-cov = "*"
psycopg2-binary = ">=2.9.9"

[tool.tox]
legacy_tox_ini ='''
    [tox]
    envlist =
        py39-django42-{postgres,mariadb},
        py39-flake8,
        docs

    [testenv]
    passenv = DB_*
    deps = poetry
    allowlist_externals = ./runtests.py
    commands =
        poetry install --no-root --with test
        mariadb: ./runtests.py {posargs} --nolint --ds=tests.settings.test_mariadb
        postgres: ./runtests.py {posargs} --nolint --ds=tests.settings.test_postgres

    [testenv:py39-django42-mariadb]
    deps = poetry
    commands = 
        poetry install --no-root --with test
        ./runtests.py {posargs} --nolint --ds=tests.settings.test_mariadb --cov=name
    allowlist_externals = ./runtests.py

    [testenv:py39-flake8]
    deps = poetry
    commands =
        poetry install --no-root --with codestyle
        ./runtests.py --lintonly
    allowlist_externals = ./runtests.py

    [testenv:docs]
    deps = Sphinx>=4.0
    changedir = docs
    commands = {envbindir}/sphinx-build -W -b html . {envtmpdir}/html
    allowlist_externals = ./runtests.py
'''